--- a/client/src/components/Control.scss
+++ b/client/src/components/Control.scss
@@ -1,7 +1,9 @@
 
 
-
 .newProductButton{
-    width: 40px;
-    height: auto;
+    width: 220px;
+    height: 50px;
+    margin-left: 20vw;
+    background-color: rgb(49, 80, 4);
+    color: white;
 }
