added routes and other changes

--- a/client/src/components/EditComponent.scss
+++ b/client/src/components/EditComponent.scss
@@ -2,7 +2,7 @@ $mainBlue: #3FA396;
 $mainRed: #E63C23;
 $complimentaryGray: #D9D9D9;
 
-.newProductForm{
+.fullEditPage{
     width: 100vw;
     height: auto;
     text-align: center;
